[CSA-58] Refactoring instant (#825)
* Instant is now a class instead of an enum

Signed-off-by: Hugo SCHINDLER <hugo.schindler@rte-france.com>

* Written by Philippe

Signed-off-by: Hugo SCHINDLER <hugo.schindler@rte-france.com>

* Written by Hugo

Signed-off-by: Hugo SCHINDLER <hugo.schindler@rte-france.com>

* Fix some problems

Signed-off-by: Hugo SCHINDLER <hugo.schindler@rte-france.com>

* Crac impl test working

Signed-off-by: Hugo SCHINDLER <hugo.schindler@rte-france.com>

* fix Sonar issue

Signed-off-by: Hugo SCHINDLER <hugo.schindler@rte-france.com>

* fix some issues with merge

Signed-off-by: Hugo SCHINDLER <hugo.schindler@rte-france.com>

* addOutageCnecsForAutoCnecsWithoutRas has a new argument. You must provide an AUTO instant

Signed-off-by: Hugo SCHINDLER <hugo.schindler@rte-france.com>

* test crac withInstantId

Signed-off-by: Hugo SCHINDLER <hugo.schindler@rte-france.com>

* Fix crac impl tests

Signed-off-by: Hugo SCHINDLER <hugo.schindler@rte-france.com>

* Migrate from instant to instantId
Assert exception messages

Signed-off-by: Hugo SCHINDLER <hugo.schindler@rte-france.com>

* Continue migration

Signed-off-by: Hugo SCHINDLER <hugo.schindler@rte-france.com>

* Continue migration

Signed-off-by: Hugo SCHINDLER <hugo.schindler@rte-france.com>

* 2/3 Tests are running !
Crac is life

Signed-off-by: Hugo SCHINDLER <hugo.schindler@rte-france.com>

* Upgrade message exception

Signed-off-by: Hugo SCHINDLER <hugo.schindler@rte-france.com>

* Fix some tests

Signed-off-by: Hugo SCHINDLER <hugo.schindler@rte-france.com>

* Fix some tests

Signed-off-by: Hugo SCHINDLER <hugo.schindler@rte-france.com>

* Fix some tests

Signed-off-by: Hugo SCHINDLER <hugo.schindler@rte-france.com>

* Fix some tests

Signed-off-by: Hugo SCHINDLER <hugo.schindler@rte-france.com>

* 50/1555 are failing

Signed-off-by: Hugo SCHINDLER <hugo.schindler@rte-france.com>

* Fix some tests

Signe